--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ BUT.. I do know how to code, and for that reason none of the above matters. </p>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <form name="sentMessage" id="contactForm" action="https://getsimpleform.com/messages?form_api_token=d6fb30e90957dbb1a6d68df2015b8c3b" method="post" novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
